Refactoring Autoboxing Removed